[gd_scene load_steps=16 format=2]

[ext_resource path="res://sprites/L3_forest/little_study/little_study_bg-min.png" type="Texture" id=1]
[ext_resource path="res://Levels/1.0 - Lab/fire.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/2.0 - Forest/kiwi.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/2.0 - Forest/study_desk.tscn" type="PackedScene" id=4]
[ext_resource path="res://hitnhurtboxes/TransitionZone.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/L2_lab/break_room_fire_fence_thingy.png" type="Texture" id=6]
[ext_resource path="res://Levels/2.0 - Forest/Candelabra_side.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/2.0 - Forest/Candelabra_front.tscn" type="PackedScene" id=8]
[ext_resource path="res://Levels/2.0 - Forest/little_study.gd" type="Script" id=11]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=12]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=15]
[ext_resource path="res://BG.tscn" type="PackedScene" id=16]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=18]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 105.925, 49.1887 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 102.439, 37.0089 )

[node name="little_study" type="Node2D"]
script = ExtResource( 11 )

[node name="bottomSP" parent="." instance=ExtResource( 18 )]
position = Vector2( 262.756, -7.39623 )

[node name="topSP" parent="." instance=ExtResource( 18 )]
position = Vector2( 589.239, -332.254 )

[node name="BG" parent="." instance=ExtResource( 16 )]
margin_left = -1535.0
margin_top = -1659.42
margin_right = 2214.0
margin_bottom = 1324.58

[node name="little_study_bg-min" type="Sprite" parent="."]
modulate = Color( 0.654902, 0.607843, 0.580392, 1 )
position = Vector2( 333.184, -403.989 )
texture = ExtResource( 1 )

[node name="fire" parent="." instance=ExtResource( 2 )]
position = Vector2( 322.124, -413.404 )
frame = 2

[node name="break_room_fire_fence_thingy" type="Sprite" parent="fire"]
position = Vector2( 1.4646, 23.9009 )
texture = ExtResource( 6 )

[node name="YSort" type="YSort" parent="."]

[node name="player" parent="YSort" instance=ExtResource( 12 )]
position = Vector2( 274.37, -40.6587 )
camera = NodePath("../../PuppyCamera")

[node name="kiwi" parent="YSort" instance=ExtResource( 3 )]
modulate = Color( 0.647059, 0.596078, 0.431373, 1 )
position = Vector2( 67.8821, -278.6 )

[node name="study_desk" parent="YSort" instance=ExtResource( 4 )]
modulate = Color( 0.607843, 0.513726, 0.513726, 1 )
position = Vector2( 557.2, -73.5391 )

[node name="PuppyCamera" parent="." instance=ExtResource( 15 )]
position = Vector2( 336.322, -416.079 )

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( -625.252, -953.316 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 1291.45, 122.66 )

[node name="bottomTZ" parent="." instance=ExtResource( 5 )]
position = Vector2( 267.821, 155.496 )

[node name="CollisionShape2D" parent="bottomTZ" index="0"]
position = Vector2( 2.94629, -11.7848 )
shape = SubResource( 1 )

[node name="topTZ" parent="." instance=ExtResource( 5 )]
position = Vector2( 586.913, -445.795 )

[node name="CollisionShape2D" parent="topTZ" index="0"]
position = Vector2( -5.32361, -9.50943 )
shape = SubResource( 2 )

[node name="Collisions" type="Node2D" parent="."]

[node name="left" type="StaticBody2D" parent="Collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions/left"]
position = Vector2( 31.1985, 273.586 )
polygon = PoolVector2Array( 241.478, -595.207, 204.709, -626.32, 150.655, -628.179, 148.277, -648.395, -89.5649, -646.017, -86.7947, -216.798, 167.592, -202.399, -429.976, 148.945, -441.975, -919, 279.662, -800.268 )

[node name="right" type="StaticBody2D" parent="Collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions/right"]
position = Vector2( -95.9951, 242.388 )
polygon = PoolVector2Array( 470.495, -568.251, 504.436, -605.021, 553.765, -619.282, 625.097, -624.332, 626.498, -729.681, 751.224, -740.371, 747.828, -624.364, 816.559, -629.089, 810.613, -176.477, 452.662, -175.287, 1084.42, 103.537, 775.966, -1150.91, 363.015, -562.594 )

[node name="FG" type="Node2D" parent="."]
modulate = Color( 0.792157, 0.72549, 0.6, 1 )
position = Vector2( 4.24261, 0 )

[node name="Candelabra_side2" parent="FG" instance=ExtResource( 7 )]
position = Vector2( -59.8458, -642.735 )
scale = Vector2( 0.6, 0.6 )

[node name="Candelabra_side3" parent="FG" instance=ExtResource( 7 )]
position = Vector2( 710.901, -642.735 )
scale = Vector2( -0.6, 0.6 )

[node name="Candelabra_front" parent="FG" instance=ExtResource( 8 )]
position = Vector2( 232.896, -712.032 )
scale = Vector2( 0.5, 0.5 )

[node name="Candelabra_front2" parent="FG" instance=ExtResource( 8 )]
position = Vector2( 408.259, -714.86 )
scale = Vector2( 0.5, 0.5 )

[connection signal="transition_triggered" from="bottomTZ" to="." method="_on_bottomTZ_transition_triggered"]
[connection signal="transition_triggered" from="topTZ" to="." method="_on_topTZ_transition_triggered"]

[editable path="fire"]
[editable path="PuppyCamera"]
[editable path="bottomTZ"]
[editable path="topTZ"]
